:bug: Fixed dialog z-index

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,149 +2,152 @@
 
 html,
 body {
-	padding: 0;
-	margin: 0;
-	font-family: 'Poppins', sans-serif;
+  padding: 0;
+  margin: 0;
+  font-family: 'Poppins', sans-serif;
 }
 
 a {
-	color: inherit;
-	text-decoration: none;
+  color: inherit;
+  text-decoration: none;
 }
 
 * {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .Overlay {
-	position: fixed;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	background-color: rgba(78, 78, 78, 0.5);
+  z-index: 2;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(78, 78, 78, 0.5);
 }
-.ant-typography{
-	color: var(--textColorPrimary);
+.ant-typography {
+  color: var(--textColorPrimary);
 }
-a.ant-typography, .ant-typography a {
-	color: var(--linkColor);
+a.ant-typography,
+.ant-typography a {
+  color: var(--linkColor);
 }
 
-h2.ant-typography, .ant-typography h2{
-	color: var(--textColorPrimary);
+h2.ant-typography,
+.ant-typography h2 {
+  color: var(--textColorPrimary);
 }
 
 .paymentRow {
-	margin-top: 30px;
-	padding: 20px;
+  margin-top: 30px;
+  padding: 20px;
 }
 
 .customSelect {
-	border-radius: 8px;
+  border-radius: 8px;
 }
 
 .react-tel-input .special-label {
-	display: none !important;
+  display: none !important;
 }
 
 .react-tel-input .form-control {
-	width: 100% !important;
-	font-size: 12px !important;
-	height: 40px !important;
-	background-color: #ffffff !important;
-	border: 1px solid #b0b0b0 !important;
-	border-radius: 8px !important;
+  width: 100% !important;
+  font-size: 12px !important;
+  height: 40px !important;
+  background-color: #ffffff !important;
+  border: 1px solid #b0b0b0 !important;
+  border-radius: 8px !important;
 }
 
 .react-tel-input .form-control:hover {
-	border-color: #0e71eb !important;
+  border-color: #0e71eb !important;
 }
 
 .react-tel-input .form-control:focus {
-	border: 1px solid #0e71eb !important;
-	box-shadow: 0px 1px 1px #0e71eb !important;
+  border: 1px solid #0e71eb !important;
+  box-shadow: 0px 1px 1px #0e71eb !important;
 }
 
 .react-tel-input .flag-dropdown {
-	z-index: 10;
+  z-index: 10;
 }
 
 .ant-menu-submenu-title:hover > .ant-menu-submenu-arrow {
-	color: #0e71eb !important;
+  color: #0e71eb !important;
 }
 
 .ant-menu-inline .ant-menu-item::after {
-	border-style: none;
+  border-style: none;
 }
 
 .ant-menu-submenu-open > .ant-menu-submenu-title,
 .ant-menu-submenu-open > .ant-menu-submenu-title > .ant-menu-submenu-arrow {
-	background-color: #0e71eb;
-	color: #ffffff !important;
+  background-color: #0e71eb;
+  color: #ffffff !important;
 }
 
 .ant-dropdown-menu.profile-dropdown {
-	box-shadow: 0px 2px 4px #00000029;
-	border: 0.20000000298023224px solid #00000029;
-	border-radius: 4px;
+  box-shadow: 0px 2px 4px #00000029;
+  border: 0.20000000298023224px solid #00000029;
+  border-radius: 4px;
 }
 
 .ant-dropdown > .ant-dropdown-menu.profile-dropdown > .ant-dropdown-menu-item {
-	font-size: 14px !important;
-	font-weight: 600 !important;
-	letter-spacing: 0.24px !important;
-	color: #4e4e4e !important;
+  font-size: 14px !important;
+  font-weight: 600 !important;
+  letter-spacing: 0.24px !important;
+  color: #4e4e4e !important;
 }
 
 .ant-dropdown-menu.profile-dropdown > .ant-dropdown-menu-item:hover,
 .ant-dropdown-menu.profile-dropdown > .ant-dropdown-menu-item:hover > a {
-	background-color: transparent;
-	color: #0e71eb !important;
-} 
+  background-color: transparent;
+  color: #0e71eb !important;
+}
 
 .ant-select .ant-select-selector {
-	height: 40px !important;
-	border: 1px solid #b0b0b0 !important;
-	border-radius: 8px !important;
+  height: 40px !important;
+  border: 1px solid #b0b0b0 !important;
+  border-radius: 8px !important;
 }
 
 .ant-select .ant-select-selector:hover {
-	border-color: #0e71eb !important;
+  border-color: #0e71eb !important;
 }
 
 .ant-select-selection-item {
-	padding-right: 18px;
-	display: flex;
-	align-items: center;
+  padding-right: 18px;
+  display: flex;
+  align-items: center;
 }
 
 .ant-table table thead > tr > th:hover,
 .ant-table table thead > tr > th > div:hover {
-	background-color: #0e71eb !important;
-	color: #ffffff !important;
+  background-color: #0e71eb !important;
+  color: #ffffff !important;
 }
 
 .ant-table-thead th.ant-table-column-sort {
-	background-color: #0e71eb;
+  background-color: #0e71eb;
 }
 
 .ant-table-column-sorter-up.active,
 .ant-table-column-sorter-down.active {
-	color: #ffffff;
+  color: #ffffff;
 }
 
 .selectPlan {
-	text-align: center;
-	width: 100%;
+  text-align: center;
+  width: 100%;
 }
 
 .ant-picker-range {
-	margin: 0 auto;
-	width: 100%;
-	height: 40px;
-	background-color: #ffffff;
-	border-radius: 8px;
-	border: 1px solid #b0b0b0;
-	font-size: 12px;
+  margin: 0 auto;
+  width: 100%;
+  height: 40px;
+  background-color: #ffffff;
+  border-radius: 8px;
+  border: 1px solid #b0b0b0;
+  font-size: 12px;
 }
